[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/sniglet/Sniglet-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/src/prefabs/gui/BackButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/sniglet/dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/src/Scenes/OptionMenu.gd" type="Script" id=4]
[ext_resource path="res://assets/src/prefabs/gui/fadeIn.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 87.9277
margin_top = 81.7818
margin_right = 1111.93
margin_bottom = 671.782
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Label" parent="Menu"]
margin_right = 1024.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Settings"

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 129.0
margin_right = 1024.0
margin_bottom = 615.0
size_flags_vertical = 3

[node name="buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 1024.0
margin_bottom = 486.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="VolumeSlider" type="HBoxContainer" parent="Menu/CenterRow/buttons"]
margin_top = 33.0
margin_right = 1024.0
margin_bottom = 96.0

[node name="Text" type="Label" parent="Menu/CenterRow/buttons/VolumeSlider"]
margin_right = 185.0
margin_bottom = 63.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 2 )
text = "Volume  "

[node name="Slider" type="HSlider" parent="Menu/CenterRow/buttons/VolumeSlider"]
margin_left = 189.0
margin_right = 1024.0
margin_bottom = 63.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -80.0
max_value = 6.0

[node name="MuteMusic" type="CheckBox" parent="Menu/CenterRow/buttons"]
margin_top = 126.0
margin_right = 1024.0
margin_bottom = 210.0
custom_fonts/font = ExtResource( 3 )
text = "Mute Music"

[node name="VolumeSlider2" type="HBoxContainer" parent="Menu/CenterRow/buttons"]
margin_top = 240.0
margin_right = 1024.0
margin_bottom = 303.0

[node name="CheckBox" type="CheckBox" parent="Menu/CenterRow/buttons/VolumeSlider2"]
margin_right = 24.0
margin_bottom = 63.0

[node name="Text" type="Label" parent="Menu/CenterRow/buttons/VolumeSlider2"]
margin_left = 28.0
margin_right = 241.0
margin_bottom = 63.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 2 )
text = "fullscreen"

[node name="BackButton" parent="Menu/CenterRow/buttons" instance=ExtResource( 2 )]
margin_top = 333.0
margin_bottom = 453.0

[node name="fadeIn" parent="." instance=ExtResource( 7 )]
visible = false
[connection signal="value_changed" from="Menu/CenterRow/buttons/VolumeSlider/Slider" to="." method="_on_Slider_value_changed"]
[connection signal="toggled" from="Menu/CenterRow/buttons/MuteMusic" to="." method="_on_MuteMusic_toggled"]
[connection signal="toggled" from="Menu/CenterRow/buttons/VolumeSlider2/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="Menu/CenterRow/buttons/BackButton" to="." method="_on_BackButton_pressed"]
